# rapid-dialect

./: .gitmodules  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml
message_definitions/extra/: .dialects-metadata.yml  Rapid.xml
src/: lib.rs
